--- a/tex/bib.tex
+++ b/tex/bib.tex
@@ -23,9 +23,22 @@
   chap. 1 ("Calcul vectoriel. Torseurs") - section IV, V et VI - p. 8-15, 
   chap. 16 (Cinématique du solide et des solides en contact) - section I - p. 257, 295
   
-\bibitem{bib_eigen}
-  Eigen
+\bibitem{bib_eigen_tutorial_alg_lin}
+  Eigen - Tutorial Linear Algebra:
+  http://eigen.tuxfamily.org/dox/%group__TutorialLinearAlgebra.html
   
+\bibitem{bib_eigen_tutorial_catalogue}
+  Eigen - Catalogue of dense decompositions,
+  %http://eigen.tuxfamily.org/dox/group__TopicLinearAlgebraDecompositions.html
+  
+\bibitem{bib_eigen_LLT_desc}
+  Eigen - LLT detailed description,
+  %http://eigen.tuxfamily.org/dox/classEigen_1_1LLT.html
+
+\bibitem{bib_eigen_tutorial_catalogue_sparse}
+  Eigen - Solving Sparse Linear Systems
+  %http://eigen.tuxfamily.org/dox/group__TopicSparseSystems.html
+
 \bibitem{bib_ros}
   ROS - site internet:
   http://wiki.ros.org/urdf/
@@ -34,5 +47,38 @@
   URDF - page internet sous le site ROS:
   http://wiki.ros.org/urdf/
 
+%\bibitem{bib_matriceDefiniePositive_1}
+%Horn & Johnson (1985), p. 397
+
+%\bibitem{bib_matriceDefiniePositive_2}
+%http://en.wikipedia.org/wiki/Positive-definite_matrix
+
+%\bibitem{bib_openMPcompilers}
+%  "OpenMP Compilers"at OpenMP.org,
+%  http://openmp.org/wp/openmp-compilers/
+%  2013-04-10. Retrieved 2013-08-14.
+
+\bibitem{bib_openMPspecs}
+  The OpenMP API specification for parallel programming,
+  http://openmp.org/wp/openmp-specifications/
+
+\bibitem{bib_openMpWikipedia}
+  http://en.wikipedia.org/wiki/OpenMP
+  
+\bibitem{bib_decompositionLUwikipedia}
+  Wikipedia% - Décomposition LU
+%  http://fr.wikipedia.org/wiki/Décomposition_LU
+
+\bibitem{bib_decompositionLU_1}
+  Cours d'analyse numérique de licence (2010) de R. Herbin, Université d'Aix-Marseille, section 1.3.1, pages 25-26
+  http://www.cmi.univ-mrs.fr/~herbin/PUBLI/anamat.pdf
+  
+\bibitem{bib_decompositionLU_2}
+  P. G. Ciarlet - « Introduction à l'analyse numérique matricielle et à l'optimisation » (1985, rééd. 2001), éd. Masson, coll. Math. Appl. pour la Maîtrise (ISBN 2-225-68893-1)
+
+%\bibitem{bib_complexiteInversionMatriceDirecte}
+%  SUR L'INVERSION DE MATRICE,
+  J.B Lasserre,
+%  http://archive.numdam.org/ARCHIVE/RO/RO_1992__26_2/RO_1992__26_2_177_0/RO_1992__26_2_177_0.pdf
 
 \end{thebibliography}
