--- a/tex/glossaire.tex
+++ b/tex/glossaire.tex
@@ -6,6 +6,7 @@
 \newacronym{acr_aba}{ABA}{Articulated Body Algorithm}
 \newacronym{acr_ros}{ROS}{Robotics Operating System \cite{bib_ros}}
 \newacronym{acr_urdf}{URDF}{Universal Robotic Description Format \cite{bib_urdf}}
+\newacronym{acr_sot}{SOT}{Stack Of Tasks}
 
 %% définitions
 
@@ -43,3 +44,6 @@
 
 \newglossdef{gsl_crba}{CRBA}{}
 
+\newglossdef{gls_openMP}{Open Multi-Processing}{is an API that supports multi-platform shared memory multiprocessing programming in C, C++, and Fortran,[4] on most processor architectures and operating systems, including Solaris, AIX, HP-UX, Linux, Mac OS X, and Windows platforms. It consists of a set of compiler directives, library routines, and environment variables that influence run-time behavior.}
+
+\newglossdef{gls_stackOfTasks}{STack Of Tasks}{Gestionnaire de l'ensemble des tâches de la plateforme robotique.}
